--- a/Lesson1/hm1/project/index.html
+++ b/Lesson1/hm1/project/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
+<header class="header container">
     <button class="btn-cart" type="button">Корзина</button>
 </header>
-<main>
+<main class="main container">
     <div class="products"></div>
 </main>
 <script src="./js/main.js"></script>
