--- a/lesson2/hm2/macronalds.html
+++ b/lesson2/hm2/macronalds.html
@@ -34,34 +34,34 @@
 
         <div class="burger__choice">
             <h4>Выберите размер</h4>
-            <label class="label" for="size_s">
-                <input name="size" id="size_s" type="radio" value="s"> Маленький
+            <label class="label" for="s">
+                <input name="size" id="s" type="radio"> Маленький
             </label>
-            <label class="label" for="size_l">
-                <input name="size" id="size_l" type="radio" value="l"> Большой
+            <label class="label" for="l">
+                <input name="size" id="l" type="radio"> Большой
             </label>
         </div>
 
         <div class="burger__choice">
             <h4>Выберите начинку</h4>
             <label class="label" for="cheese">
-                <input name="stuffing" id="cheese" type="radio" value="cheese"> С сыром
+                <input name="stuffing" id="cheese" type="radio"> С сыром
             </label>
             <label class="label" for="salad">
-                <input name="stuffing" id="salad" type="radio" value="salad"> С салатом
+                <input name="stuffing" id="salad" type="radio"> С салатом
             </label>
             <label class="label" for="potato">
-                <input name="stuffing" id="potato" type="radio" value="potato"> С картофелем
+                <input name="stuffing" id="potato" type="radio"> С картофелем
             </label>
         </div>
 
         <div class="burger__choice">
             <h4>Добавить приправы</h4>
             <label class="label" for="spices">
-                <input name="toppings" id="spices" type="checkbox" value="spices"> Посыпать специями
+                <input name="toppings" id="spices" type="checkbox"> Посыпать специями
             </label>
             <label class="label" for="mayo">
-                <input name="toppings" id="mayo" type="checkbox" value="mayo"> Полить майонезом
+                <input name="toppings" id="mayo" type="checkbox"> Полить майонезом
             </label>
         </div>
     </div>
