--- a/lesson3/hm3/project/index.html
+++ b/lesson3/hm3/project/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <header class="header container">
-    <button class="btn-cart" type="button">Корзина</button>
+    <button class="btn-header" type="button">Каталог</button>
+    <button id="btn-cart" class="btn-header" type="button">Корзина</button>
+    <div class="cart__box"></div>
 </header>
 <main class="main container">
     <div class="products"></div>
