--- a/lesson3/hm3/project/index.html
+++ b/lesson3/hm3/project/index.html
@@ -9,7 +9,7 @@
 <header class="header container">
     <button class="btn-header" type="button">Каталог</button>
     <button id="btn-cart" class="btn-header" type="button">Корзина</button>
-    <div class="cart__box"></div>
+    <div class="cart__box visibility"></div>
 </header>
 <main class="main container">
     <div class="products"></div>
