--- a/lesson5/hm5/project/index.html
+++ b/lesson5/hm5/project/index.html
@@ -12,7 +12,7 @@
         <div class="logo">Интернет-магазин</div>
         <div class="cart">
             <form action="#" class="search-form">
-                <input type="text" class="search-field">
+                <input type="text" class="search-field" v-model="searchLine" v-on:input="filterGoods()">
                 <button class="btn-search" type="submit">
                     <i class="fas fa-search"></i>
                 </button>
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main>
-        <div class="products">
+        <div v-if="!searchLine" class="products">
             <div class="product-item" v-for="product of products" :key="product.id_product">
                 <img :src="imgCatalog" alt="Some img">
                 <div class="desc">
@@ -31,6 +31,17 @@
                 </div>
             </div>
         </div>
+        <div v-if="searchLine" class="products">
+            <div class="product-item" v-for="product of productsSearched" :key="product.id_product">
+                <img :src="imgCatalog" alt="Some img">
+                <div class="desc">
+                    <h3>{{product.product_name}}</h3>
+                    <p>{{product.price}}₽</p>
+                    <button class="buy-btn" @click="addProduct(product)">Купить</button>
+                </div>
+            </div>
+        </div>
+
     </main>
 </div>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
