--- a/lesson5/hm5/project/index.html
+++ b/lesson5/hm5/project/index.html
@@ -17,7 +17,22 @@
                     <i class="fas fa-search"></i>
                 </button>
             </form>
-            <button class="btn-cart" type="button">Корзина</button>
+            <button class="btn-cart" type="button" @click="isVisibleCart = !isVisibleCart">Корзина</button>
+            <div v-if="isVisibleCart" class="cart-block">
+                <div class="cart-item" data-id="${this.id_product}" v-for="product of cart">
+                    <div class="product-bio">
+                        <div class="product-desc">
+                            <p class="product-title">{{product.product_name}}</p>
+                            <p class="product-quantity">Количество: {{product.quantity}}</p>
+                            <p class="product-single-price">{{product.price}} за ед.</p>
+                        </div>
+                    </div>
+                    <div class="right-block">
+                        <p class="product-price">{{product.price}} ₽</p>
+                        <button class="del-btn" data-id="${this.id_product}">&times;</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <main>
