--- a/lesson6/hm6/project_normal_variant/index.html
+++ b/lesson6/hm6/project_normal_variant/index.html
@@ -11,13 +11,7 @@
     <header>
         <div class="logo">Интернет-магазин</div>
         <div class="cart">
-<!--                        <form action="#" class="search-form" @submit.prevent="filter">-->
-<!--                            <input type="text" class="search-field" v-model="userSearch">-->
-<!--                            <button class="btn-search" type="submit">-->
-<!--                                <i class="fas fa-search"></i>-->
-<!--                            </button>-->
-<!--                        </form>-->
-            <search :value = 'userSearch' :userSearc = 'userSearch' v-model="userSearch" ref="search"></search>
+            <search v-model="userSearch"></search>
             <cart ref="cart"></cart>
         </div>
     </header>
