checked server work

--- a/lesson8/final project/public/catalog.html
+++ b/lesson8/final project/public/catalog.html
@@ -196,98 +196,106 @@
 
 <section class="product__items center">
 
-    <div class="product__cards">
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-1.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
+    <!--    <div class="product__cards">-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-1.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-7.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card product__card_hidden">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-3.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-4.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-8.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-9.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-10.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-11.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="product__card">-->
+    <!--            <a href="#"><img class="product__img" src="img/card-12.png" alt="item"></a>-->
+    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
+    <!--            <div class="product__text">-->
+    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
+    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
+    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
+    <!--                <p class="product__price">$52.00</p>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <div id="app">
+
+        <div class="product__cards">
+            <products ref="products"></products>
         </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-7.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card product__card_hidden">
-            <a href="#"><img class="product__img" src="img/card-3.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-4.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-8.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-9.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-10.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-11.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
-        <div class="product__card">
-            <a href="#"><img class="product__img" src="img/card-12.png" alt="item"></a>
-            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>
-            <div class="product__text">
-                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>
-                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool
-                    Kym Ellery teams up with Moda Operandi.</p>
-                <p class="product__price">$52.00</p>
-            </div>
-        </div>
+
     </div>
+
 </section>
 
 <nav class="center">
