--- a/lesson8/final project/public/cart.html
+++ b/lesson8/final project/public/cart.html
@@ -99,7 +99,7 @@
     </ol> -->
 
 </nav>
-<section class="cart-block center">
+<section class="center">
     <!--    <div class="item-cart cart-block__left">-->
     <!--        <div class="order">-->
     <!--            <div class="order__box-img"><img class="order__img" src="img/card-3.png" alt="man"></div>-->
@@ -137,7 +137,7 @@
     <!--        </div>-->
 
     <!--    </div>-->
-    <div id="app" class="item-cart cart-block__left">
+    <div id="app">
 
         <cart ref="cart"></cart>
 
@@ -146,26 +146,26 @@
 <!--            <button class="item-cart__butt">CONTINUE SHOPPING</button>-->
 <!--        </div>-->
     </div>
-    <div class="cart-block__right">
-        <form action="#" class="form cart-block__form">
-            <h3 class="form__heading">SHIPPING ADRESS</h3>
-            <input class="form__input" type="text" placeholder="Bangladesh">
-            <input class="form__input" type="text" placeholder="State">
-            <input class="form__input cart-block__input" type="text" placeholder="Postcode / Zip">
-            <button class="form__butt cart-block__butt">GET A QUOTE</button>
-        </form>
-        <div class="checkout">
-            <ul class="checkout__content">
-                <li class="checkout__cost">SUB TOTAL <span class="checkout__cost_money"></span>$900</li>
-                <li class="checkout__cost select_text">GRAND TOTAL
-                    <hr class="checkout__cost_rule">
-                    <span class="checkout__cost_money select">$900</span>
-                </li>
-            </ul>
-            <hr class="checkout__rule">
-            <button class="checkout__butt">PROCEED TO CHECKOUT</button>
-        </div>
-    </div>
+<!--    <div class="cart-block__right">-->
+<!--        <form action="#" class="form cart-block__form">-->
+<!--            <h3 class="form__heading">SHIPPING ADRESS</h3>-->
+<!--            <input class="form__input" type="text" placeholder="Bangladesh">-->
+<!--            <input class="form__input" type="text" placeholder="State">-->
+<!--            <input class="form__input cart-block__input" type="text" placeholder="Postcode / Zip">-->
+<!--            <button class="form__butt cart-block__butt">GET A QUOTE</button>-->
+<!--        </form>-->
+<!--        <div class="checkout">-->
+<!--            <ul class="checkout__content">-->
+<!--                <li class="checkout__cost">SUB TOTAL <span class="checkout__cost_money"></span>$900</li>-->
+<!--                <li class="checkout__cost select_text">GRAND TOTAL-->
+<!--                    <hr class="checkout__cost_rule">-->
+<!--                    <span class="checkout__cost_money select">$900</span>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--            <hr class="checkout__rule">-->
+<!--            <button class="checkout__butt">PROCEED TO CHECKOUT</button>-->
+<!--        </div>-->
+<!--    </div>-->
 
 </section>
 
