--- a/lesson8/final project/public/catalog.html
+++ b/lesson8/final project/public/catalog.html
@@ -423,7 +423,7 @@
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<!--<script src="js/CartComp.js"></script>-->
+<script src="js/CartComp.js"></script>
 <script src="js/ProducComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/main.js"></script>
