--- a/lesson8/final project/public/catalog.html
+++ b/lesson8/final project/public/catalog.html
@@ -11,290 +11,24 @@
 </head>
 
 <body>
-<header class="header center">
-    <div class="header__left">
-        <a href="index.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
-        <a href="#"><img class="header__search" src="img/search.svg" alt="search"></a>
-    </div>
-    <div class="header__right">
-        <input class="check__menu" id="switch" type="checkbox">
-        <label class="header__link switch__menu" for="switch"><img src="img/menu.svg"
-                                                                   alt="menu"></label>
-        <div class="menu menu__height">
-            <div class="menu__icon">
-                <a class="header__link" href="registration.html"><img src="img/account.svg"
-                                                                      alt="account"></a>
-                <a class="header__link" href="cart.html"><img src="img/cart.svg" alt="cart"></a>
-            </div>
-            <div class="menu__box">
-                <div class="menu__block">
 
-                    <h3 class="menu__heading">MENU</h3>
-                    <div class="menu_table">
-                        <div class="menu__category">
+<div id="app">
 
-                            <h3 class="menu__heading select_text">MAN</h3>
-                            <ul class="menu-man">
-                                <li><a class="menu__link" href="#">Accessories</a></li>
-                                <li><a class="menu__link" href="#">Bags</a></li>
-                                <li><a class="menu__link" href="#">Denim</a></li>
-                                <li><a class="menu__link" href="#">T-Shirts</a></li>
-                            </ul>
-                        </div>
-                        <div class="menu__category">
-                            <h3 class="menu__heading select_text">WOMAN</h3>
-                            <ul class="menu-woman">
-                                <li><a class="menu__link" href="#">Accessories</a></li>
-                                <li><a class="menu__link" href="#">Jackets & Coats</a></li>
-                                <li><a class="menu__link" href="#">Polos</a></li>
-                                <li><a class="menu__link" href="#">T-Shirts</a></li>
-                                <li><a class="menu__link" href="#">Shirts</a></li>
-                            </ul>
-                        </div>
-                        <div class="menu__category">
-                            <h3 class="menu__heading select_text">KIDS</h3>
-                            <ul class="kids">
-                                <li><a class="menu__link" href="#">Accessories</a></li>
-                                <li><a class="menu__link" href="#">Jackets & Coats</a></li>
-                                <li><a class="menu__link" href="#">Polos</a></li>
-                                <li><a class="menu__link" href="#">T-Shirts</a></li>
-                                <li><a class="menu__link" href="#">Shirts</a></li>
-                                <li><a class="menu__link" href="#">Bags</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <label for="switch" class="butt-clouse butt-clouse">
-                        <svg class="butt-clouse__img " width="18" height="18" viewBox="0 0 18 18" fill="none"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path class="butt-clouse__img_theme_dark"
-                                  d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-                                  fill="#575757"/>
-                        </svg>
-                    </label>
-                </div>
-            </div>
-        </div>
-        <a class="header__link header__link_hidden" href="registration.html"><img src="img/account.svg"
-                                                                                  alt="account"></a>
-        <a class="header__link header__link_hidden" href="cart.html"><img src="img/cart.svg" alt="cart"></a>
-    </div>
-</header>
+    <header-el></header-el>
 
-<nav class="category center">
-    <div class="category__name">NEW ARRIVALS</div>
-    <ol class="crumb">
-        <li class="crumb__item"><a href="index.html">HOME</a></li>
-        <li class="crumb__item"><a href="#">MEN</a></li>
-        <li class="crumb__item" aria-current="page"><a class="active" href="#">NEW ARRIVALS</a></li>
-    </ol>
+    <nav-el></nav-el>
 
-</nav>
+    <filters-el></filters-el>
 
-<section class="filters center">
-    <details class="filter__categories">
-        <summary class="filter__summary"><span class="filter_hidden">FILTER</span>
-            <svg
-                    class="filter__img_mobile" width="15" height="10" viewBox="0 0 15 10" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                <path class="open__filter"
-                      d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z"
-                      fill="black"/>
-            </svg>
-        </summary>
+    <section class="product__items center">
 
-        <nav class="filter__nav">
-            <details open>
-                <summary class="summary__category">CATEGORY</summary>
-                <ul class="filter__link">
-                    <li><a href="#">Accessories</a></li>
-                    <li><a href="#">Bags</a></li>
-                    <li><a href="#">Denim</a></li>
-                    <li><a href="#">Hoodies & Sweatshirts</a></li>
-                    <li><a href="#">Jackets & Coats</a></li>
-                    <li><a href="#">Polos</a></li>
-                    <li><a href="#">Shirts</a></li>
-                    <li><a href="#">Shoes</a></li>
-                    <li><a href="#">Sweaters & Knits</a></li>
-                    <li><a href="#">T-Shirts</a></li>
-                    <li><a href="#">Tanks</a></li>
-                </ul>
-            </details>
-            <details>
-                <summary>BRAND</summary>
-                <ul class="filter__link">
-                    <li><a href="#">Accessories</a></li>
-                    <li><a href="#">Bags</a></li>
-                    <li><a href="#">Denim</a></li>
-                    <li><a href="#">Hoodies & Sweatshirts</a></li>
-                </ul>
-            </details>
-            <details>
-                <summary>DESIGNER</summary>
-                <ul class="filter__link">
-                    <li><a href="#">Accessories</a></li>
-                    <li><a href="#">Bags</a></li>
-                    <li><a href="#">Denim</a></li>
-                    <li><a href="#">Sweaters & Knits</a></li>
-                    <li><a href="#">T-Shirts</a></li>
-                    <li><a href="#">Tanks</a></li>
-                </ul>
-            </details>
-        </nav>
 
-    </details>
-    <div class="filters-down filters_center">
-        <details>
-            <summary class="filters__after filters__summary_center">TRENDING NOW</summary>
-            <div class="filters__box_position filters__box_first">
-                <label for="bags">
-                    <input id="bags" type="checkbox"> Bags
-                </label>
-                <label for="shirts">
-                    <input id="shirts" type="checkbox"> Shirts
-                </label>
-                <label for="t-shirts">
-                    <input id="t-shirts" type="checkbox"> T-Shirts
-                </label>
-                <label for="sk">
-                    <input id="sk" type="checkbox"> Sweaters & Knits
-                </label>
-                <label for="knits">
-                    <input id="knits" type="checkbox"> Knits
-                </label>
-            </div>
-        </details>
-        <details>
-            <summary class="filters__after filters__summary_center">SIZE</summary>
-            <div class="filters__box_position">
-                <label for="xs">
-                    <input id="xs" type="checkbox"> XS
-                </label>
-                <label for="s">
-                    <input id="s" type="checkbox"> S
-                </label>
-                <label for="m">
-                    <input id="m" type="checkbox"> M
-                </label>
-                <label for="l">
-                    <input id="l" type="checkbox"> L
-                </label>
-            </div>
-        </details>
-        <details>
-            <summary class="filters__after filters__summary_center">PRICE</summary>
-            <div class="filters__box_position">
-                <label for="min">
-                    <input name="price" id="min" type="radio"> MIN
-                </label>
-                <label for="max">
-                    <input name="price" id="max" type="radio"> MAX
-                </label>
-            </div>
-        </details>
-    </div>
-</section>
+        <products ref="products"></products>
 
-<section class="product__items center">
 
-    <!--    <div class="product__cards">-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-1.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-7.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card product__card_hidden">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-3.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-4.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-8.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-9.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-10.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-11.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="product__card">-->
-    <!--            <a href="#"><img class="product__img" src="img/card-12.png" alt="item"></a>-->
-    <!--            <a class="product__cart" href="#"><img src="img/product-cart.svg" alt="cart"> Add to Cart</a>-->
-    <!--            <div class="product__text">-->
-    <!--                <a class="product__name" href="#">ELLERY X M'O CAPSULE</a>-->
-    <!--                <p class="text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool-->
-    <!--                    Kym Ellery teams up with Moda Operandi.</p>-->
-    <!--                <p class="product__price">$52.00</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <div id="app">
+    </section>
 
-            <products ref="products"></products>
-
-    </div>
-
-</section>
+</div>
 
 <nav class="center">
     <ul class="pagination">
@@ -425,6 +159,9 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/CartComp.js"></script>
 <script src="js/ProducComp.js"></script>
+<script src="js/CatalogHeaderComp.js"></script>
+<script src="js/CatalogNavComp.js"></script>
+<script src="js/CatalogFiltersComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/main.js"></script>
 
