--- a/lesson8/final project/public/cart.html
+++ b/lesson8/final project/public/cart.html
@@ -194,7 +194,7 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/CartComp.js"></script>
-<!--    <script src="js/ProducComp.js"></script>-->
+<!--    <script src="js/CatalogComp.js"></script>-->
 <script src="js/main.js"></script>
 
 </body>
