--- a/lesson8/final project/public/catalog.html
+++ b/lesson8/final project/public/catalog.html
@@ -22,7 +22,7 @@
 
     <section class="center">
 
-        <products v-show="showCatalog" ref="products"></products>
+        <catalog v-show="showCatalog" ref="products"></catalog>
 
         <cart v-show="showCart" ref="cart"></cart>
 
@@ -158,7 +158,7 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/CartComp.js"></script>
-<script src="js/ProducComp.js"></script>
+<script src="js/CatalogComp.js"></script>
 <script src="js/CatalogHeaderComp.js"></script>
 <script src="js/CatalogNavComp.js"></script>
 <script src="js/CatalogFiltersComp.js"></script>
