--- a/lesson8/final project/public/catalog.html
+++ b/lesson8/final project/public/catalog.html
@@ -51,6 +51,8 @@
         </ul>
     </nav>
 
+    <products v-show="showProduct"></products>
+
 </div>
 
 <section class="advantage center">
@@ -159,6 +161,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/CartComp.js"></script>
 <script src="js/CatalogComp.js"></script>
+<script src="js/ProductsComp.js"></script>
 <script src="js/CatalogHeaderComp.js"></script>
 <script src="js/CatalogNavComp.js"></script>
 <script src="js/CatalogFiltersComp.js"></script>
