--- a/lesson8/final project/src/public/product.html
+++ b/lesson8/final project/src/public/product.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header center">
         <div class="header__left">
-            <a href="index.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
+            <a href="index1.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
             <a href="#"><img class="header__search" src="img/search.svg" alt="search"></a>
         </div>
         <div class="header__right">
@@ -76,7 +76,7 @@
     <nav class="category center">
         <div class="category__name">NEW ARRIVALS</div>
         <ol class="crumb">
-            <li class="crumb__item"><a href="index.html">HOME</a></li>
+            <li class="crumb__item"><a href="index1.html">HOME</a></li>
             <li class="crumb__item"><a href="#">MEN</a></li>
             <li class="crumb__item" aria-current="page"><a class="active" href="#">NEW ARRIVALS</a></li>
         </ol>
