--- a/lesson8/final project/src/public/cart.html
+++ b/lesson8/final project/src/public/cart.html
@@ -13,7 +13,7 @@
 <body>
 <header class="header center">
     <div class="header__left">
-        <a href="index.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
+        <a href="index1.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
         <a href="#"><img class="header__search" src="img/search.svg" alt="search"></a>
     </div>
     <div class="header__right">
@@ -81,7 +81,7 @@
 </header>
 <!-- <header class="header center">
     <div class="header__left">
-        <a href="index.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
+        <a href="index1.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
         <a href="#"><img class="header__search" src="img/search.svg" alt="search"></a>
     </div>
     <div class="header__right">
@@ -93,7 +93,7 @@
 <nav class="category center category_alone">
     <div class="category__name">SHOPPING CART</div>
     <!-- <ol class="category__crumb">
-        <li class="category__crumb__item"><a href="index.html">HOME</a></li>
+        <li class="category__crumb__item"><a href="index1.html">HOME</a></li>
         <li class="category__crumb__item"><a href="#">MEN</a></li>
         <li class="category__crumb__item" aria-current="page"><a class="active" href="#">NEW ARRIVALS</a></li>
     </ol> -->
