change catalog to index

--- a/lesson8/final project/src/public/registration.html
+++ b/lesson8/final project/src/public/registration.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header center">
         <div class="header__left">
-            <a href="index1.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
+            <a href="index.html"><img class="brand" src="img/logo.svg" alt="logo"></a>
             <a href="#"><img class="header__search" src="img/search.svg" alt="search"></a>
         </div>
         <div class="header__right">
